Add a setup command to make the binary globally available

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "bin": "./bin/run.js",
   "scripts": {
-    "80-20": "./bin/run.js"
+    "80-20": "./bin/run.js",
+    "setup": "npm link"
   },
   "devDependencies": {},
   "dependencies": {
